[package]
name = "tomson"
version = "0.1.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Bidirectional convertions between Toml and Json"
documentation = "http://softprops.github.io/tomson"
homepage = "https://github.com/softprops/tomson"
repository = "https://github.com/softprops/tomson"
keywords = ["toml", "json"]
license = "MIT"

[dependencies]
toml = "0.1.20"
rustc-serialize = "0.3.14"